# VibeCode

./: .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  INTEGRATION_TEST_REPORT.md  README.md  SOLUTION_SUMMARY.md  github_actions_fix_summary.md  integration_test_analysis.md  query_tools.py  tasks.md  test_all_mcp_tools_comprehensive.py  test_claude_code_integration.py  test_complete_mcp_tools_e2e.py  test_comprehensive_e2e_all_tools.py  test_comprehensive_mcp_tools_e2e.py  test_improved_tunnel_handling.py  test_mcp_simple.py  test_mcp_tools_focused.py  test_quick_tunnel_investigation.py  test_report.md  test_server_startup_fix.py  test_tasks_comprehensive_final.py  test_tasks_md_complete.py  test_tunnel_e2e_comprehensive.py
.github/workflows/: mcp-integration-tests.yml
vibecode/: README.md  calculator.py  pyproject.toml  test_calculator.py
vibecode/.github/workflows/: integration-test.yml  lint.yml
vibecode/tests/: test_all_tools_integration.py  test_claude_code_hello_world.py  test_claude_code_integration.py  test_claude_code_mcp_tool.py  test_claude_code_real_world.py  test_cloudflared_connection.py  test_comprehensive_mcp_tools.py  test_dependencies.py  test_detailed_cloudflared.py  test_e2e_comprehensive.py  test_e2e_real_server.py  test_http2_fix.py  test_integration.py  test_mcp_auth_integration.py  test_oauth.py  test_quick_tunnel_fix_verification.py  test_real_e2e_tunnel.py  test_results_summary.md  test_server_debug.py  test_simple_http_server.py  test_tool_execution_debug.py  test_tunnel_debug.py
vibecode/vibecode/: __init__.py  __main__.py  claude_code_tool.py  cli.py  compatibility_patch.py  mock_mcp.py  oauth.py  server.py
vibecode_pkg/: .gitignore  README.md  pyproject.toml
vibecode_pkg/tests/: test_claude_code_github_actions.py
vibecode_pkg/vibecode/: __init__.py  cli.py
